defini el metodo que te dice que dia estamos, utilice switch y algunos casos para probar

--- a/ejercicio1/fecha.html
+++ b/ejercicio1/fecha.html
@@ -7,7 +7,18 @@
 	<body>
 		
 		<script>
-			
+			function getDia(fecha){
+				fecha = new Date();
+				numDia = fecha.getDay();
+				switch(numDia){
+					case 0:
+						return "Domingo";
+						break;
+					case 1:
+						return "Lunes";
+						break;
+				}
+			}
 		</script>
 	</body>
 </html>
