--- a/ejercicio1/fecha.html
+++ b/ejercicio1/fecha.html
@@ -17,7 +17,25 @@
 					case 1:
 						return "Lunes";
 						break;
+					case 2:
+						return "Martes";
+						break;
+					case 3:
+						return "Miercoles";
+						break;
+					case 4:
+						return "Jueves";
+						break;
+					case 5:
+						return "Viernes";
+						break;
+					case 6:
+						return "Sábado";
+						break;
+					default:
+						return "";
 				}
+
 			}
 		</script>
 	</body>
