para insertar el texto puse un form con los inputs

--- a/ejercicio2/invertirTexto.html
+++ b/ejercicio2/invertirTexto.html
@@ -5,6 +5,9 @@
         <title>Ejercicio 2</title>
     </head>
     <body>
+        <form>
+            <input type="text" name="texto" id="texto">
+        </form>
         <script>
             
         </script>
