defini la funcion que invertira los strings

--- a/ejercicio2/invertirTexto.html
+++ b/ejercicio2/invertirTexto.html
@@ -7,9 +7,16 @@
     <body>
         <form>
             <input type="text" name="texto" id="texto">
+            <input type="submit">
         </form>
         <script>
-            
+            function invertirTexto(string){
+                let stringInv = '';
+                for(let i = string.length; i > 0; i--){
+                    stringInv = cadenaInv + string.substr(i--,i);
+                }
+                document.getElementById().innerHTML = stringInv;
+            }
         </script>
     </body>
 </html>
