--- a/ejercicio2/invertirTexto.html
+++ b/ejercicio2/invertirTexto.html
@@ -16,7 +16,7 @@
                 console.log(string);
                 let stringInv = '';
                 for(let i = string.length; i > 0; i--){
-                    stringInv = cadenaInv + string.substr(i--,i);
+                    stringInv = stringInv + string.substr(i--,i);
                 }
                 document.getElementById("demo").innerHTML = stringInv;
             }
