defini una seccion div, ademas de la funcion con la fecha actual y una constante que toma el año actual y el dia y mes de AQP

--- a/ejercicio3/diasArequipa.html
+++ b/ejercicio3/diasArequipa.html
@@ -5,8 +5,13 @@
         <title>Ejercicio 3</title>
     </head>
     <body>
+        <div id="demo" onload="diaArequipa()"></div>
         <script>
-            
+            function diaArequipa(){
+                let fecha = new Date();
+                const diaAQP = new Date(fecha.getFullYear(), 7, 15)
+                
+            }
         </script>
     </body>
 </html>
