despues de revisar regexp en w3 schools, declaramos un patron y obtenemos el codigo, la funcion se llamara con el atributo onchange

--- a/ejercicio4/codigoURL.html
+++ b/ejercicio4/codigoURL.html
@@ -5,12 +5,19 @@
         <title>Ejercicio 4</title>
     </head>
     <body>
-        <form>
+        <form onchange="codigoSesion()">
             <input type="text" id="url" name="url">
         </form>
         <div id="demo"></div>
         <script>
-            
+            function codigoSesion(){
+                let url = document.getElementById("url").value;
+                // Despues de revisar w3 schools
+                let patron = /[/][a-z][?]/g;
+                let codigoSlash = patron.exec(url);
+                patron = /[a-z]/g;
+                let codigo;
+            }
         </script>
     </body>
 </html>
