--- a/ejercicio5/tablaDinamica.html
+++ b/ejercicio5/tablaDinamica.html
@@ -5,8 +5,17 @@
         <title>Ejercicio 5</title>
     </head>
     <body>
+        <form>
+            <label for="largo">Largo: </label>
+            <input type="text" id="largo" name="largo">
+            <label for="ancho">Ancho: </label>
+            <input type="text" id="ancho" name="ancho">
+            <button onclick="">Enviar</button>
+        </form>
         <script>
-            
+            function generarTabla(){
+                
+            }
         </script>
     </body>
 </html>
