declare los valores de largo y ancho en la funcion, además de llamar a una nueva función que genere solo filas

--- a/ejercicio5/tablaDinamica.html
+++ b/ejercicio5/tablaDinamica.html
@@ -14,7 +14,12 @@
         </form>
         <script>
             function generarTabla(){
-                
+                let largo = document.getElementById("largo").value;
+                let ancho = document.getElementById("ancho").value;
+                let fila = generarFila(largo);
+            }
+            function generarFila(largo){
+                let filahtml = "<tr>";
             }
         </script>
     </body>
