le puse un nombre al boton, porque no se mostraba, este se pone al principio enves de al final

--- a/ejercicio5/tablaDinamica.html
+++ b/ejercicio5/tablaDinamica.html
@@ -26,7 +26,7 @@
                 }
                 tabla += "</tabla>"
                 console.log(tabla);
-                contenido = tabla + "<button type='button' onclick='sumarValores()'></button>";
+                contenido ="" +  tabla + "<button type='button' onclick='sumarValores()'>Sumar</button>";
                 document.getElementById("demo").innerHTML = contenido;
             }
             function generarFila(largo,ind){
