puse el largo y ancho como locales y las inicie de nuevo en la funcion sumaValores, corregi aumentar i en el bucle anidado e hice que el string que recibia se convirtiera en numero

--- a/ejercicio5/tablaDinamica.html
+++ b/ejercicio5/tablaDinamica.html
@@ -14,9 +14,9 @@
         <button type="button" onclick="generarTabla()">Enviar</button>
         <div id="demo"></div>
         <script>
-            let largo = document.getElementById("largo").value;
-            let ancho = document.getElementById("ancho").value;
-            function generarTabla(){    
+            function generarTabla(){   
+                let largo = document.getElementById("largo").value;
+                let ancho = document.getElementById("ancho").value; 
                 let contenido;
                 let tabla = "<table>";
                 let fila;
@@ -39,11 +39,14 @@
                 return filahtml;
             }
             function sumarValores(){
+                let largo = document.getElementById("largo").value;
+                let ancho = document.getElementById("ancho").value;
                 let suma = 0;
                 let valor;
                 for(let i = 0; i < largo; i++){
-                    for(let j = 0; i < ancho; i++){
-                        valor = document.getElementById(i + "_" + j).value;
+                    for(let j = 0; i < ancho; j++){
+                        //cambiar el string a numero
+                        valor = number(document.getElementById(i + "_" + j).value);
                         suma += valor;
                     }
                 }
