quise quitar el return de la funcion pero tal vez ayude cuando utilice consola, ademas hice que la funcion cambiara el documento, gracias a añadir un div mas

--- a/ejercicio5/tablaDinamica.html
+++ b/ejercicio5/tablaDinamica.html
@@ -13,6 +13,7 @@
         </form>
         <button type="button" onclick="generarTabla()">Enviar</button>
         <div id="demo"></div>
+        <div id="suma"></div>
         <script>
             function generarTabla(){   
                 let largo = document.getElementById("largo").value;
@@ -53,7 +54,7 @@
                     }
                 }
                 console.log(suma);
-                return suma;
+                document.getElementById("suma").innerHTML = suma;
             }
         </script>
     </body>
